--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+.indicator {
+  margin: auto;
+  font-weight: bold;
+  font-size: 30px;
+  width: 200px;
+  height: 100px;
+  padding-top: 100px;
+  color: red;
+}
+
 .box {
     margin: 0 auto;
     border-color: black;  
@@ -18,6 +28,21 @@
   .box p {
       text-align: center;
       font-size: 20px;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  ul li {
+    margin: auto;
+    text-align: center;
+    font-size: 30px;
+    background: chartreuse;
+    width: 30%;
+    margin-bottom: 10px;
   }
 
   .box button {
